<resources>
    <string name="app_name">Remember Me</string>
    <string name="action_settings">Settings</string>
    <string name="settings_label">Settings</string>
    <string name="start_label">Start</string>
    <string name="training_label">Training</string>
    <string name="exit_label">Exit</string>
    <string name="high_scores_label">High scores</string>
    <string name="about_label">About</string>


    <!--Logging Fragment Buttons-->
    <string name="login_gmail">Login with Gmail</string>
    <string name="login_hint">Login</string>
    <string name="password_hint">password</string>
    <string name="email_hint">email</string>

    <!--Choose Nick Fragment Buttons-->
    <string name="username_splash_title">Choose you username</string>
    <string name="username_splash_hint">USERNAME</string>
    <string name="confirm_splash">CONFIRM</string>
    <string name="additional_info_splash">You will be able to change your nickname in settings whenever you like</string>


    <!--In Game Buttons-->
    <string name="restart_label">Restart</string>
    <string name="back_to_menu_label">Back to menu</string>
    <string name="in_game_settings_label">Settings</string>

    <!--Settings titles ID-->
    <string name="settings_title">Training settings</string>
    <string name="choose_game_size">Choose game size:</string>
    <string name="choose_game_difficulty">Choose game difficulty:</string>

    <!--Statisctic fragment-->
    <string name="game_score_label">Game Score</string>
    <string name="scored_points_label">Scored points</string>
    <string name="time_spent_label">Time spent</string>
    <string name="game_state_win">WIN</string>
    <string name="game_state_lose">LOSE</string>
    <string name="game_default_score">0</string>

    <!--Hgh scores-->
    <string name="high_scores">HIGH SCORES</string>
    <string name="top_100_tab_title">TOP 100</string>
    <string name="my_scores_tab_title">MY SCORE</string>
    <string name="my_ranking_tab_title">MY RANKING</string>

    <!--test add unit ID-->
    <string name="test_banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>

<!-- PRODUCTION KEYS-->
    <string name="continue_game_ad_unit_id">ca-app-pub-5578147969963645/9621706247</string>
    <string name="home_banner_ad_unit_id">ca-app-pub-5578147969963645/6266142521</string>
    <string name="settings_banner_ad_unit_id">ca-app-pub-5578147969963645/1041736002</string>
    <string name="game_banner_ad_unit_id">ca-app-pub-5578147969963645/6102490990</string>
    <string name="training_banner_ad_unit_id">ca-app-pub-5578147969963645/4293272224</string>
    <string name="about_banner_ad_unit_id">ca-app-pub-5578147969963645/1971674297</string>
    <string name="high_scores_banner_ad_unit_id">ca-app-pub-5578147969963645/9641322898</string>
    <!-- DEBUG KEYS-->
<!--    <string name="continue_game_ad_unit_id">ca-app-pub-3940256099942544/5224354917</string>
    <string name="home_banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="settings_banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="game_banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="training_banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="about_banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="high_scores_banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>-->


    <string name="client_id">1038128085369-mrbea78pg76stsmcn5emglued6dkjrem.apps.googleusercontent.com</string>
    <string name="logged_as">"Logged as: "</string>
    <string name="button_confirmation_text">OK</string>
    <string name="about_desc">Points are calculated based on number of links on particular level and time left to draw which means the faster you draw the more points you will score. If you cannot remember the pattern you can always click \'GIVE UP\' button which will finish game on current level(without including points for current level) \n You have 2 lives per day. You can use them to continue lost game(only once per game). If you run out of lives you can watch an ad to continue playing. </string>
    <string name="about_header">REMEMBER ME</string>
    <string name="about_developed_by">This application is developed by \n Piotr Andrychiewicz</string>
    <string name="about_app_version">App version:</string>
    <string name="logged_in_as">Logged in as:</string>
    <string name="logout">LOGOUT</string>
    <string name="account_creation_info">If you do not have an account it will be created automatically</string>
    <string name="sound_effects">Sound effects</string>
    <string name="background_music">Background music</string>
    <string name="lives_label">Lives</string>
    <string name="lives_available_description">You can continue from the level you lost using 1 live. This is available one time per game. When you run out of lives you will be able to continue the game by watching and ad</string>
    <string name="no_lives_available_description">You are out of lives. Would you like to watch an AD to continue playing ? </string>
    <string name="privacy_policy">Privacy policy\n https://remember-me.flycricket.io/privacy.html</string>

</resources>
