<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/loggingLayout">

    <EditText android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:inputType="textEmailAddress"
        android:hint="@string/email_hint"
        android:layout_weight="1"
        android:id="@+id/email"/>

    <EditText android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:inputType="textPassword"
        android:layout_weight="1"
        android:hint="@string/password_hint"
        android:id="@+id/password"/>

    <Button android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:text="@string/login_hint"
        android:id="@+id/login"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_margin="5dp"
        android:text="OR"/>

    <Button android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:text="@string/login_gmail"
        android:id="@+id/gmail_login"/>
</LinearLayout>