<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    android:background="@color/black">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_label"
        android:id="@+id/buttonStart"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/green"
        android:background="@color/black"
        android:textSize="30dp"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/high_scores_label"
        android:id="@+id/buttonHighScores"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/green"
        android:background="@color/black"
        android:textSize="30dp"
        android:layout_below="@+id/buttonAbout"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_label"
        android:id="@+id/buttonAbout"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/green"
        android:background="@color/black"
        android:textSize="30dp"
        android:layout_below="@+id/buttonStart"
        android:layout_marginTop="10dp"
        android:layout_alignLeft="@+id/buttonStart"
        android:layout_alignStart="@+id/buttonStart" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exit_label"
        android:id="@+id/buttonExit"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/green"
        android:background="@color/black"
        android:textSize="30dp"
        android:layout_below="@+id/buttonHighScores"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        ads:adSize="LARGE_BANNER"
        ads:adUnitId="@string/banner_ad_unit_id"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">
    </com.google.android.gms.ads.AdView>
</RelativeLayout>