<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/black"
              android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/gameStateTextView"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:text="@string/game_state_win"
            android:textColor="@color/green"
            android:textSize="@dimen/text_bigger"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/gameScoreLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:text="@string/game_score_label"
            android:textColor="@color/green"
            android:textSize="@dimen/text_bigger"/>

        <TextView
            android:id="@+id/gameScoreTextView"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:layout_marginLeft="@dimen/fab_margin"
            android:layout_marginStart="@dimen/fab_margin"
            android:text="@string/game_default_score"
            android:textColor="@color/green"
            android:textSize="@dimen/text_bigger"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/timeSpentLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:text="@string/time_spent_label"
            android:textColor="@color/green"
            android:textSize="@dimen/text_bigger"/>

        <TextView
            android:id="@+id/timeSpentTextView"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:layout_marginLeft="@dimen/fab_margin"
            android:layout_marginStart="@dimen/fab_margin"
            android:text="@string/game_default_score"
            android:textColor="@color/green"
            android:textSize="@dimen/text_bigger"/>
    </LinearLayout>
</LinearLayout>